--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,21 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
-<%= yield %>
-
+  <div class= "container">
+    <div id="user_nav">
+      <% if user_signed_in? %>
+        Logged in as <strong><%= current_user.email %></strong>.
+        <%= link_to 'Edit profile', edit_user_registration_path %> |
+        <%= link_to "Log out", destroy_user_session_path, method: :delete %>
+      <% else %>
+        <%= link_to "Sign up", new_user_registration_path %> |
+        <%= link_to "Log in", new_user_session_path %>
+      <% end %>
+    </div>
+    <% flash.each do |message_type, message| %>
+      <div id="flash" class="flash-<%= message_type %>"><%= message %></div>
+    <% end %>
+    <%= yield %>
+  </div>
 </body>
 </html>
