--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,7 +25,7 @@
       <% end %>
     </div>
     <% flash.each do |message_type, message| %>
-      <div id="flash" class="flash-<%= message_type %>"><%= message %></div>
+      <div id="flash_<%= message_type %>" class="flash_<%= message_type %>"><%= message %></div>
     <% end %>
     <%= yield %>
   </div>
