--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -12,6 +12,7 @@
     </div>
   <% end %>
   <div>
+    <%= f.hidden_field :user_id %>
     <%= f.label :title %><br>
     <%= f.text_field :title %>
   </div>
