--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,10 +1,24 @@
 <h1><%= @article.title %></h1>
 
 <p>
-  <%= @article.text %>
+  <%= markdown(@article.text) %>
 </p>
 <div>
   <%= link_to '< Back to Blog Index', articles_path %>
-   | 
-  <%= link_to 'Edit this article', edit_article_path %>
+  <% if current_user.admin? %>
+    |
+    <%= link_to 'Edit this article', edit_article_path %>
+  <% end %>
+
+  <h2>Comments</h2>
+  <%= render @article.comments %>
+  <%= form_for([@article, @article.comments.build]) do |f| %>
+    <%= f.hidden_field(:user_id, :value => current_user.id) %>
+    <div>
+      <%= f.label :body %><br />
+      <%= f.text_area :body %>
+    </div>
+    <%= f.submit %><br />
+    <div class="byline">Posting as <%= current_user.username %></div>
+  <% end %>
 </div>
