--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,22 +1,55 @@
-<!DOCTYPE html>
+
 <html>
-<head>
-  <title>Rgblog</title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-  <%= csrf_meta_tags %>
-</head>
-<body>
-  <div class="container" id="container">
-    <% if user_signed_in? %>
-      <%= render "partials/reg_user_toolbar" %>
-    <% else %>
-      <%= render "partials/anon_user_toolbar" %>
-    <% end %>
-    <% flash.each do |message_type, message| %>
-      <div id="flash_<%= message_type %>" class="flash_<%= message_type %>"><%= message %></div>
-    <% end %>
-    <%= yield %>
-  </div>
-</body>
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Rgblog</title>
+    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+    <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+    <%= csrf_meta_tags %>
+  </head>
+  <body>
+    <nav class="navbar navbar-inverse navbar-static-top">
+      <div class="container-fluid">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <%# <a class="navbar-brand" href="#">MMDBlog</a> %>
+          <%= link_to "MMDBlog", root_path, class: "navbar-brand" %>
+        </div>
+
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+          <ul class="nav navbar-nav">
+            <% if user_signed_in? %>
+              <%= render "partials/admin_tools" %>
+            <% end %>
+          </ul>
+          <ul class="nav navbar-nav navbar-right">
+            <% if user_signed_in? %>
+              <%= render "partials/reg_user_menu" %>
+            <% else %>
+              <%= render "partials/anon_user_menu" %>
+            <% end %>
+          </ul>
+        </div><!-- /.navbar-collapse -->
+      </div><!-- /.container-fluid -->
+    </nav>
+    <div id="container" class="container-fluid">
+      <div class="row">
+        <div class="centered content_column">
+          <% flash.each do |message_type, message| %>
+            <span id="flash_<%= message_type %>" class="flash_<%= message_type %>"><%= message %></span>
+          <% end %>
+          <%= yield %> 
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
