--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,26 +1,32 @@
-<%= form_for @article do |f| %>
+<%= form_for @article, html: { :class => "form" } do |f| %>
   <% if @article.errors.any? %>
-    <div id="error_explanation">
-      <h2>
-        <%= pluralize(@article.errors.count, "error") %> prohibited this article from being saved:
-      </h2>
+  <!-- Error Messages -->
+    <div class="alert alert-danger alert-dismissable">
+      <button aria-hidden="true" class="close" data-dismiss="alert" type="button">&times;</button>
+      <h4>
+        <%= "#{pluralize(@article.errors.count, "error")} prohibited this article from being saved:" %>
+      </h4>
       <ul>
         <% @article.errors.full_messages.each do |msg| %>
-          <li> <%= msg %></li>
+          <li>
+            <%= msg %>
+          </li>
         <% end %>
       </ul>
     </div>
   <% end %>
+  
   <div>
     <%= f.hidden_field :user_id %>
     <%= f.label :title %><br>
-    <%= f.text_field :title %>
+    <%= f.text_field :title, :class => 'form-control' %>
   </div>
   <div>
     <%= f.label :text %><br>
-    <%= f.text_area :text %>
+    <%= f.text_area :text, rows: "20", :class => 'form-control' %>
   </div>
+  <br />
   <div>
-    <%= f.submit %>
+    <%= f.submit :class => 'btn btn-primary' %>
   </div>
 <% end %>
