--- a/app/views/partials/_reg_user_toolbar.html.erb
+++ b/app/views/partials/_reg_user_toolbar.html.erb
@@ -1,14 +1,4 @@
-<% if current_user.admin? || current_user.editor? %>
-  <div id="editor_tools">
-    <%= link_to "Write a new article", new_article_path %>
-  </div>
-<% end %>
-<% if current_user.admin? %>
-  <div id="admin_tools">
-    <%= link_to "Manage blog users", users_path %>
-  </div>
-<% end %>
-<div id="user_nav">
+<span id="user_nav">
   Logged in as <strong><%= current_user.username %></strong> (<%= current_user.email %>)
   <% unless current_user.provider? %>
     <%= link_to 'Edit profile', edit_user_registration_path %> |
@@ -17,4 +7,4 @@
   <% if current_user.image? %>
     <img src='<%= current_user.image %>' alt="<%= current_user.username %> avatar"/>
   <% end %>
-</div>
+</span>
