--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -15,7 +15,7 @@
       </ul>
     </div>
   <% end %>
-  
+
   <div>
     <%= f.hidden_field :user_id %>
     <%= f.label :title %><br>
@@ -23,7 +23,8 @@
   </div>
   <div>
     <%= f.label :text %><br>
-    <%= f.text_area :text, rows: "20", :class => 'form-control' %>
+    <%= f.text_area :text,  rows: "20", :class => 'form-control wysihtml5-ed' %>
+    <%# <%= f.text_area :text, rows: "20", :class => 'form-control' %1> %>
   </div>
   <br />
   <div>
