--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -5,9 +5,7 @@
 <span class="timestamp">Posted
   <%= time_ago_in_words(article.created_at) %> ago.
 </span>
-<p>
-  <%= markdown(truncate(article.text, length: 1000)) %>
-</p>
+<%= content_tag(:p, excerpt(article).html_safe) %>
 <p>
   <%= link_to 'Go to article', article_path(article) %>
 </p>
