--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -7,5 +7,5 @@
 </span>
 <%= content_tag(:p, excerpt(article).html_safe) %>
 <p>
-  <%= link_to 'Go to article', article_path(article) %>
+  <%= link_to "Go to article (#{pluralize(article.comments.count, 'comment')})", article_path(article) %>
 </p>
