--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,8 +1,24 @@
 <div class="body_column">
   <h1>Matt's Blog Users</h1>
-  <ul>
-    <% @users.each do |user| %>
-      <li><%= link_to "#{user.username}", user_path(user) %> (<%= user.email %>)</li>
-    <% end %>
-  </ul>
+  <table class="table table-striped">
+    <tbody>
+      <% @users.each do |user| %>
+        <tr>
+          <td>
+            <%= link_to user.email, user %><br />
+            <%= user.username %>
+          </td>
+          <td>
+            <%= form_for(user) do |f| %>
+              <%= f.select(:role, User.roles.keys.map {|role| [role.titleize,role]}) %>
+              <%= f.submit 'Change Role', class: 'btn btn-primary btn-xs' %>
+            <% end %>
+          </td>
+          <td>
+            <%= link_to("Delete user", user_path(user), :data => { :confirm => "Are you sure?" }, :method => :delete, :class => 'button') unless user == current_user %>
+          </td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
 </div>
