ajax comment submission working

--- a/app/assets/stylesheets/comments.scss
+++ b/app/assets/stylesheets/comments.scss
@@ -1,3 +1,15 @@
 // Place all the styles related to the Comments controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+#comments-section {
+  display: none;
+}
+
+#comments-submission {
+  margin-top: 35px;
+}
+
+.comment-header {
+  font-weight: bold;
+}
