--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -9,21 +9,25 @@
     <%= link_to 'Edit this article', edit_article_path %>
   <% end %>
 </div>
-  <h2>Comments</h2>
-  <%= render @article.comments %>
-  <% if user_signed_in? %>
-  <%= form_for([@article, @article.comments.build]) do |f| %>
-    <%= f.hidden_field(:user_id, :value => current_user.id) %>
-    <div>
-      <%= f.label :comment  %><br />
-      <%= f.text_area :body, rows: "7", class: "wysihtml5-cmt form-control"%>
-    </div>
-    <br />
-    <%= f.submit :class => "btn btn-primary" %><br />
-    <div class="byline">Posting as <%= current_user.username %></div>
-  <% end %>
-  <% else %>
-    <div>
+<%= link_to "Comments", "#", class: "comment-header", id: "comment-open" %>
+<section id="comments-section">
+  <ol id="comments-list">
+    <%= render @article.comments %>
+  </ol>
+  <div id="comments-submission">
+    <% if user_signed_in? %>
+      <%= form_for [@article, @article.comments.build], remote: true do |f| %>
+        <%= f.hidden_field(:user_id, :value => current_user.id) %>
+        <div>
+          <%= f.label :comment  %><br />
+          <%= f.text_area :body, rows: "7", placeholder: "Post a comment...", class: "form-control" %>
+        </div>
+        <br />
+        <%= f.submit :class => "btn btn-primary" %><br />
+        <div class="byline">Posting as <%= current_user.username %></div>
+      <% end %>
+    <% else %>
       <%= link_to 'Log in', new_user_session_path %> or <%= link_to 'Sign up', new_user_registration_path %> to leave a comment.
-    </div>
-  <% end %>
+    <% end %>
+  </div>
+</section>
