--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,8 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Rgblog</title>
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+    <% unless params[:nojs] %>
+      <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+    <% end %>
     <%= csrf_meta_tags %>
+
   <body>
     <nav class="navbar navbar-inverse navbar-static-top">
       <div class="container-fluid">
@@ -44,28 +47,10 @@
       <div class="row">
         <div class="centered content_column">
           <%= flash_messages %>
-          <%= yield %> 
+          <%= yield %>
         </div>
       </div>
     </div>
 
-    <script type="text/javascript" charset="utf-8">
-      $(document).on('page:load', function(){
-          window['rangy'].initialized = false
-      })
-
-      $(document).ready(function(){
-
-        $('.wysihtml5-cmt').each(function(i, elem) {
-          $(elem).wysihtml5({'toolbar': {'font-styles': false, 'emphasis': {'small': false}, 'image': false}});
-        });
-
-        $('.wysihtml5-ed').each(function(i, elem) {
-          $(elem).wysihtml5({'toolbar': {'font-styles': false, 'emphasis': {'small': false}, }});
-        });
-
-      })
-    </script>
-  </head>
   </body>
 </html>
