basic react comments work

--- a/app/assets/stylesheets/comments.scss
+++ b/app/assets/stylesheets/comments.scss
@@ -2,8 +2,9 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-#comments-submission {
-  margin-top: 35px;
+#comment-form {
+  padding-top: 35px;
+  padding-bottom: 20px;
 }
 
 .comment-header {
