--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -12,26 +12,9 @@
 <h2>Comments</h2>
 <section id="comments-section">
   <%= react_component('CommentsBox',
-                      { comments: json_for(@article.comments) },
+                      { comments: comments_list_json(@article.comments),
+                         user: user_json(current_user) || false,
+                         article_id: @article.id },
                       { prerender: params[:noprerender].nil? } ) %>
-                    <% if user_signed_in? %>erb
-    <div id="comments-submission">
-      <%= form_for [@article, @article.comments.build], remote: true do |f| %>
-        <%= f.hidden_field(:user_id, :value => current_user.id) %>
-        <%= f.label :comment  %><br />
-        <%= f.text_area :body, rows: "7", placeholder: "Post a comment...", class: "form-control" %>
-        <br />
-        <%= f.submit :class => "btn btn-primary" %><br />
-        <div class="byline">Posting as <%= current_user.username %></div>
-      <% end %>
-    </div>
-    <% else %>
-      <div id="comments-submission">
-      <%= link_to 'Log in', new_user_session_path, id: 'comment_login' %> or <%= link_to 'Sign up', new_user_registration_path %> to leave a comment.
-    </div>
-    <% end %>
-  </div>
-</section>
-<div id="comm" class="name">
 
-</div>
+</section>
