--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -13,7 +13,8 @@
   <%= react_component('CommentsBox',
                       { comments: comments_list_json(@article.comments),
                          user: user_json(current_user) || false,
-                         article_id: @article.id },
+                         article_id: @article.id,
+                         csrf_token: form_authenticity_token },
                       { prerender: params[:noprerender].nil? } ) %>
 
 </div>
