--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -8,8 +8,8 @@
  * You're free to add application-wide styles to this file and they'll appear at the top of the
  * compiled file, but it's generally better to create a new file per style scope.
  *
- *= require_self
- *= require_tree .
+ 
+ 
  */
 
 @import "bootstrap-sprockets";
@@ -74,4 +74,25 @@ img {
   border: solid 1px #C66;
 }
 
+
+// DO NOT REQUIRE TREE! It will interfere with load order!
+
+// Account for differences between Rails and Webpack Sass code.
+$rails: true;
+
+// Included from bootstrap-sprockets gem and loaded in app/assets/javascripts/application.rb
+@import 'bootstrap-sprockets';
+
+// Customizations - needs to be imported after bootstrap-sprocket but before bootstrap-custom!
+// The _pre-bootstrap.scss file is located under
+// client/assets/stylesheets, which has been added to the Rails asset
+// pipeline search path. See config/application.rb.
+@import 'pre-bootstrap';
+
+// These scss files are located under client/assets/stylesheets
+// (which has been added to the Rails asset pipeline search path in config/application.rb).
+@import 'bootstrap-custom';
+
+// This must come after all the boostrap styles are loaded so that these styles can override those.
+@import 'post-bootstrap';
 
