--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -12,6 +12,5 @@
   <%= react_component('CommentsBox',
                       { comments: comments_list_json(@article.comments),
                          user: user_json(current_user) || false,
-                         article_id: @article.id,
-                         csrf_token: form_authenticity_token },
+                         article_id: @article.id },
                       { prerender: params[:noprerender].nil? } ) %>
