--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,7 @@
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
     <% unless params[:nojs] %>
       <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+      <%= javascript_tag "window._token = '#{form_authenticity_token}'" %>
     <% end %>
     <%= csrf_meta_tags %>
 
