semi-broken vanilla devise implementation

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,13 +34,13 @@
               <%= render "partials/admin_tools" %>
             <% end %>
           </ul>
-          <ul class="nav navbar-nav navbar-right">
-            <% if user_signed_in? %>
-              <%= render "partials/reg_user_menu" %>
-            <% else %>
-              <%= render "partials/anon_user_menu" %>
-            <% end %>
-          </ul>
+          <%# <ul class="nav navbar-nav navbar-right"> %>
+          <%#   <% if user_signed_in? %1> %>
+          <%#     <%= render "partials/reg_user_menu" %1> %>
+          <%#   <% else %1> %>
+          <%#     <%= render "partials/anon_user_menu" %1> %>
+          <%#   <% end %1> %>
+          <%# </ul> %>
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
     </nav>
