lock in small styling changes and changes to Comments Container before new branch

--- a/app/assets/stylesheets/comments.scss
+++ b/app/assets/stylesheets/comments.scss
@@ -7,6 +7,11 @@
   padding-bottom: 20px;
 }
 
+#comment-login-prompt {
+  padding-top: 35px;
+  padding-bottom: 210px;
+}
+
 .comment-enter {
   background-color: #ffeebb;
 }
