--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -9,13 +9,11 @@
     <%= link_to 'Edit this article', edit_article_path %>
   <% end %>
 </div>
-<%= react_component('CommentsApp',
-                    props: { comments: comments_list_json(@article.comments),
+<%= redux_store('RGBlog',
+                    { comments: comments_list_json(@article.comments),
                              user: user_json(current_user) || false,
                              article: @article.id }
                    ) %>
-  <%# <%= react_component('CommentsBox', %>
-  <%#                     props: { comments: comments_list_json(@article.comments), %>
-  <%#                        user: user_json(current_user) || false, %>
-  <%#                        article_id: @article.id } %>
-  <%#                     ) %1> %>
+<%= react_component('CommentsApp') %>
+<%= react_component('AuthApp') %>
+
