--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,12 @@
     <%# <%= csrf_meta_tags %1> %>
 
   <body>
+<%= redux_store('RGBlog',
+                    { comments: @article ? comments_list_json(@article.comments) : false,
+                             user: user_json(current_user) || false,
+                             article: @article ? @article.id : false }
+                   ) %>
+<%= react_component('AuthApp') %>
     <nav class="navbar navbar-inverse navbar-static-top">
       <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
