implement ugly but fully functional navbar

--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -23,8 +23,7 @@
   </div>
   <div>
     <%= f.label :text %><br>
-    <%= f.text_area :text,  rows: "20", :class => 'form-control wysihtml5-ed' %>
-    <%# <%= f.text_area :text, rows: "20", :class => 'form-control' %1> %>
+    <%= f.text_area :text, rows: "20", :class => 'form-control' %>
   </div>
   <br />
   <div>
