--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,9 +8,8 @@
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
     <% unless params[:nojs] %>
       <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-      <%# <%= javascript_tag "window._token = '#{form_authenticity_token}'" %1> %>
     <% end %>
-    <%# <%= csrf_meta_tags %1> %>
+    <%= csrf_meta_tags %>
 
   <body>
 <%= redux_store('RGBlog',
@@ -19,37 +18,7 @@
                              article: @article ? @article.id : false }
                    ) %>
 <%= react_component('AuthApp') %>
-    <nav class="navbar navbar-inverse navbar-static-top">
-      <div class="container-fluid">
-        <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <%# <a class="navbar-brand" href="#">MMDBlog</a> %>
-          <%= link_to "MMDBlog", root_path, class: "navbar-brand" %>
-        </div>
-
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-          <ul class="nav navbar-nav">
-            <% if user_signed_in? %>
-              <%= render "partials/admin_tools" %>
-            <% end %>
-          </ul>
-          <ul class="nav navbar-nav navbar-right">
-            <% if user_signed_in? %>
-              <%= render "partials/reg_user_menu" %>
-            <% else %>
-              <%= render "partials/anon_user_menu" %>
-            <% end %>
-          </ul>
-        </div><!-- /.navbar-collapse -->
-      </div><!-- /.container-fluid -->
-    </nav>
+<%= react_component('NavApp') %>
     <div id="container" class="container-fluid">
       <div class="row">
         <div class="centered content_column">
