--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,7 +1,7 @@
 <h1><%= @article.title %></h1>
 
 <p>
-  <%= sanitize(@article.text) %>
+  <%= markdown(@article.text) %>
 </p>
 <div id="article_nav">
   <%= link_to '< Back to Blog Index', articles_path %>
