--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -15,5 +15,5 @@
   data-show-faces="true">
 </div>
 </div>
-<%= react_component('CommentsApp') %>
+<%= react_component('CommentsApp', props: {}) %>
 
