--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -8,6 +8,9 @@
   <div>
     <%= f.label :text %><br>
     <%= f.text_area :text, rows: "20", :class => 'form-control' %>
+    <span id="helpBlock" class="help-block">
+      Any images need to be served via https.
+    </span>
   </div>
   <br />
   <div>
