fix markdown rendering on index page

--- a/app/views/articles/_article_extract.html.erb
+++ b/app/views/articles/_article_extract.html.erb
@@ -3,7 +3,7 @@
 </h3>
 By <%= link_to "#{art.author}", user_path(art.user) %>
 <p>
-  <%= art.text %>
+  <%= markdown(art.text) %>
 </p>
 <p>
   <%= link_to 'Go to article', article_path(art) %>
