update Facebook login path to correct cookie mismatches

--- a/client/assets/stylesheets/_post-bootstrap.scss
+++ b/client/assets/stylesheets/_post-bootstrap.scss
@@ -5,6 +5,6 @@
 // This is where you can add your own styles and override bootstrap styles
 // utilizing bootstrap variables and mixins.
 
-.this-works {
+.blockquote {
   color: orange;
 }
